cmake_minimum_required(VERSION 3.0.0)

enable_testing()


set(CMAKE_CXX_FLAGS "-std=c++14 -pthread -O2 -s -DNDEBUG -march=native")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -Wcast-align -Wcast-qual -Wconversion -Wdisabled-optimization -Wendif-labels -Wfloat-equal -Winit-self -Winline -Wlogical-op -Wmissing-include-dirs -Wnon-virtual-dtor -Wold-style-cast -Woverloaded-virtual -Wpacked -Wpointer-arith -Wredundant-decls -Wshadow -Wsign-promo -Wswitch-default -Wswitch-enum -Wunsafe-loop-optimizations -Wvariadic-macros -Wwrite-strings ")
# set(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -pg")
# set(CMAKE_CXX_FLAGS_RELEASE "-O2 -s -DNDEBUG -march=native")
# set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g3 -Og -pg")
# set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -s -DNDEBUG -march=native")

find_package(Threads REQUIRED)
find_package(OpenCV REQUIRED)

add_executable(PushBackSpeed WallTimer/src/walltimer.cpp main.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

